# skeleton_keys

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  Dockerfile  MANIFEST.in  README.md  conda-lock.yml  docker_build.sh  environment.yml  mac_10.15_py3.8_environment.yml  requirements.txt  setup.cfg  task_worker.py
doc/: requirements.txt
doc/source/: conf.py  guide.rst  guide_aligned_coord_example.csv  guide_example_features_long_excerpt.csv  index.rst  install.rst
doc/source/reference/: cmds.rst  database_queries.rst  depth_profile.rst  drawings.rst  feature_definition.rst  index.rst  io.rst  layer_alignment.rst  plotting.rst  slice_angle.rst  upright.rst
example_data/: 606271263_surfaces_and_layers.json  694146546_surfaces_and_layers.json  740135032_surfaces_and_layers.json  Sst-IRES-Cre_Ai14-408415.03.02.02_864876723_m.swc  Vip-IRES-Cre_Ai14-387150.05.02.01_811371030_m.swc  Vipr2-IRES2-Cre_Slc32a1-T2A-FlpO_Ai65-337416.05.01.01_678210885_m.swc  aligned_coord_example.csv  aligned_coord_hist.csv  aligned_depth_profiles.csv  aligned_soma_depths.csv  axon_loadings.csv  coord_example.csv  coord_layer_drawings.json  example_features_long.csv  example_features_wide_normalized.csv  example_features_wide_unnormalized.csv  example_specimen_ids.txt  upright_only_740135032.swc
example_data/layer_aligned_swcs/: 606271263.swc  694146546.swc  740135032.swc
example_data/upright_swcs/: 606271263.swc  694146546.swc
skeleton_keys/: cloudfields.py  database_queries.py  depth_profile.py  drawings.py  feature_definition.py  full_morph.py  hist_tasks.py  io.py  layer_alignment.py  plotting.py  slice_angle.py  tasks.py  upright.py
skeleton_keys/cmds/: calc_histogram_loadings.py  depth_profiles_from_aligned_coords.py  depth_profiles_from_aligned_swcs.py  edit_layer_drawings.py  full_morph_layer_drawings.py  layer_aligned_coords.py  layer_aligned_swc.py  postprocess_features.py  process_morphology_features.py  upright_corrected_swc.py
skeleton_keys/test_files/: 4493.json  4493.swc  Surface_And_Layer_Polygon_Example.ipynb  feature_pipeline.sh  specimen_ids.txt
tests/: test_correct_upright.py
