[metadata]
name = skeleton_keys
version = 0.0.1

[options]
packages = skeleton_keys
install_requires =
    numpy
    scipy
    pandas
    scikit-learn
    neuron_morphology
    argschema
    allensdk
    ccf_streamlines
    shapely
    geopandas

[options.entry_points]
console_scripts =
    skelekeys-morph-features = skeleton_keys.cmds.process_morphology_features:main
    skelekeys-postprocess-features = skeleton_keys.cmds.postprocess_features:main
    skelekeys-profiles-from-swcs = skeleton_keys.cmds.depth_profiles_from_aligned_swcs:main
    skelekeys-layer-aligned-swc = skeleton_keys.cmds.layer_aligned_swc:main
