[metadata]
name = skeleton_keys
version = attr: skeleton_keys.__version__

[options]
packages = find:
install_requires =
    numpy
    scipy
    pandas
    scikit-learn
    neuron_morphology[streamlines]
    argschema
    allensdk
    shapely
    geopandas
    ccf_streamlines
    rasterio

[options.entry_points]
console_scripts =
    skelekeys-morph-features = skeleton_keys.cmds.process_morphology_features:console_script
    skelekeys-postprocess-features = skeleton_keys.cmds.postprocess_features:console_script
    skelekeys-profiles-from-swcs = skeleton_keys.cmds.depth_profiles_from_aligned_swcs:main
    skelekeys-profiles-from-coords = skeleton_keys.cmds.depth_profiles_from_aligned_coords:console_script
    skelekeys-layer-aligned-swc = skeleton_keys.cmds.layer_aligned_swc:console_script
    skelekeys-layer-aligned-coords = skeleton_keys.cmds.layer_aligned_coords:console_script
    skelekeys-upright-corrected-swc = skeleton_keys.cmds.upright_corrected_swc:console_script
    skelekeys-calc-histogram-loadings = skeleton_keys.cmds.calc_histogram_loadings:console_script